# ferromic

./: .gitattributes  .gitignore  10be944.diff  7dfb281.diff  COMMIT_CATALOG.md  Cargo.toml  L405BB_g4b_incidents.txt  POLARIZATION.md  README.md  bench.json  c8e37b2.diff  check_fixed_sites.py  deduplicate.py  dist_by_type.py  distance_diversity.py  dnds.py  dnds_kde.py  fd0f66e.diff  fe9a069.diff  fixed.py  install.sh  length_distribution.py  manhattan_plot.py  matrix_plots.py  output.csv  pairwise_matrix_test.py  permute.py  phy_to_fasta.py  plot_diversity_scatterplot.py  pyproject.toml  regions_plot.py  replicate_figures.py  stage2_rao_review_response.md  test_pipeline_lib.py  test_setup.sh  test_standalone_union  top_n_pi  visualize_pca.py
.cargo/: config.toml
.github/workflows/: CI.yml  analysis_pipeline.yml  ancestral_orientation.yml  batch_best_tagging_snps.yml  benchmark_hsinv0284.yml  benchmarks.yml  combine_paml.yml  fixed.yml  generate_supplementary_tables.yml  manual_run_vcf.yml  nextjs.yml  pheweb-download.yml  publish.yml  replicate_manuscript_statistics.yml  run_analysis.py  run_analysis.yml  run_best_tagging_snps.yml  run_find_tagging_snps.yml  rust.yml  scoreinvhap_concordance.yml  upload_latest_manual_run_artifacts.yml
cds/: PAML_METHODS_NOTE.md  README.md  axt_to_phy.py  codeml_runner.py  combine_phy.py  finalize_results.py  generate_gha_matrix.py  iqtree_runner.py  omega_test.py  pipeline_lib.py  positive_test.py
data/: .polarity_applied  FST_data.tsv  GRAND_PAML_RESULTS.tsv  README.md  all_pop_phewas_tag.tsv  ancestral_allele_2504_calls.tsv  ancestral_allele_anchored_calls.tsv  ancestral_allele_polarity.tsv  ancestral_orientation.tsv  apes2025_t2t_inversions.tsv  apes2025_t2t_polarity.tsv  assembly_data_report.jsonl  balanced_recurrence_results.tsv  best_tagging_snps_qvalues.tsv  callset.tsv  cds_conservation_calibration.tsv  cds_conservation_table.tsv  cds_emm_adjusted.tsv  cds_emm_nocov.tsv  cds_identical_proportions.tsv  cds_pairwise_adjusted.tsv  cds_pairwise_nocov.tsv  data_summary.tsv  dataset_catalog.json  divergence_da_dxy_by_type.tsv  divergence_da_dxy_by_type_stats.tsv  divergence_edge_decay_spearman.tsv  divergence_middle_vs_flank.tsv  divergence_middle_vs_flank_stats.tsv  fixed_diff_summary.tsv  four_fold_pi_by_inversion.tsv  four_fold_pi_tests.tsv  gene_inversion_direct_inverted.tsv  gene_inversion_fixed_differences.tsv  hudson_fst_results.tsv  imputation_benchmark_HsInv0284.tsv  imputation_benchmark_HsInv0284_summary.tsv  imputation_results.tsv  inv_properties.tsv  inversion_polarity.tsv  (+31 more)
data/models/: README.md
imputation/: README.md  benchmark_hsinv0284.py  infer_dosage.py  linked.py  prepare_data_for_infer.py  tagging_snp_inversion_dosages.py
imputation/tests/: test_dosage_guard.py  test_family_grouping.py  test_tagging_inversion_id.py
lambda/: sims.py
phewas/: README.md  categories.py  cli.py  inversion_frequency.py  iox.py  models.py  pheno.py  pipes.py  run.py  score.py  test_integration_pvalues.py  test_setup.sh  test_suite.py  test_testing.py  testing.py  tests.py
phewas/extra/: README.md  README_categories_test.md  categories_test.py  custom_control_followup.py  family.py  h2.py
phewas/tests/: test_integration_pvalues.py  test_inversions.py  test_stats_fixes.py  test_suite.py
scoreinvhap_benchmark/: README.md  compute_concordance.py  infer_dosage_public.py  run_scoreinvhap.R
scripts/: apply_polarity.py  compare_inversion_sets.py  download_phy_files.py  extract_best_tagging_snp.py  prepare_figures_manifest.py  replicate_figures.py
src/: README.md  lib.rs  main.rs  merge.rs  parse.rs  pca.rs  process.rs  progress.rs  run_vcf.rs  stats.rs  transcripts.rs
stats/: CDS_identical_model.py  CDS_plots.py  OR_matrix.py  PGS_control_plot.py  README.md  _codon_diversity.py  _inv_common.py  acaf_snv_list.py  add_status.py  af_diffs.py  af_pi.py  all_unique_snps_sorted.txt  analyze_ext_phewas.py  ancestral_allele_2504.py  ancestral_allele_afree_panel.py  ancestral_allele_anchored.py  ancestral_allele_anchored2.py  ancestral_allele_anchorfree.py  ancestral_allele_fisher.py  ancestral_allele_panel.py  ancestral_allele_pangenie.py  ancestral_allele_polarize.py  ancestral_allele_vcfwave.py  ancestral_orientation.py  ancient.py  az_table.py  batch_best_tagging_snps.py  category_figure.py  category_per_site.py  category_per_site_normed.py  cds_conservation_calibration.py  cds_differences.py  chr17_inversion_tag_correlation.py  conserve_chords.py  conserve_inv_dir.py  cross_violins.py  dist_diversity_by_type.py  dist_diversity_scan.py  dist_fst_by_type.py  distance_diversity.py  (+103 more)
tests/: test_categories_cov_and_metrics.py  test_categories_plan.py
(+47 files in other folders)
