[package]
name = "ferromic"
version = "0.1.0"
edition = "2021"

[lib]
name = "ferromic"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.43", features = ["full"] }
flate2 = "1.0" 
anyhow = "1.0"
rayon = "1.10"
indicatif = "0.17"
human_bytes = "0.4"
sysinfo = "0.28.4"
log = "0.4"
env_logger = "0.10"
num_cpus = "1.16"
crossbeam-channel = "0.5"
memmap2 = "0.5"
thiserror = "1.0"
colored = "2.2"
itertools = "0.10"
rand = "0.8.5"
parking_lot = "0.12.3"
tempfile = "3.17"
csv = "1.3"
assert_cmd = "2.0"
predicates = "2.1"
bio = "2.0.3"
regex = "1.11"
prettytable = "0.10"
once_cell = "1.20.3"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[[bin]]
name = "ferromic"
path = "src/main.rs"

[[bin]]
name = "vcf_merge"
path = "src/merge.rs"

[[bin]]
name = "run_vcf"
path = "src/run_vcf.rs"
