[package]
name = "ferromic"
version = "0.1.0"
authors = ["Ferromic Developers"]
edition = "2021"
description = "Rust-accelerated population genetics toolkit with ergonomic Python bindings"
readme = "README.md"
license-file = "LICENSE.md"
repository = "https://github.com/ferromic/ferromic"
homepage = "https://github.com/ferromic/ferromic"
documentation = "https://github.com/ferromic/ferromic#readme"
keywords = [
    "population-genetics",
    "bioinformatics",
    "rust",
    "pyo3",
    "numpy",
]
categories = [
    "science",
    "science::bioinformatics",
]

[lib]
name = "ferromic"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
numpy = "0.18"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.45", features = ["full"] }
flate2 = "1.1"
anyhow = "1.0"
rayon = "1.10"
indicatif = "0.17"
human_bytes = "0.4"
sysinfo = "0.28.4"
log = "0.4"
env_logger = "0.10"
num_cpus = "1.16"
crossbeam-channel = "0.5"
memmap2 = "0.5"
thiserror = "1.0"
colored = "2.2"
itertools = "0.10"
rand = "0.8.5"
parking_lot = "0.12.3"
tempfile = "3.19"
csv = "1.3"
assert_cmd = "2.0"
predicates = "2.1"
bio = "2.2.0"
regex = "1.11"
prettytable = "0.10"
once_cell = "1.21.3"
terminal_size = "0.4.2"
chrono = "0.4.41"
glob = "0.3.2"
ndarray = "0.16.1"
nalgebra = "0.33"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9.109", features = ["vendored"] }

[build-dependencies]
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9.109", features = ["vendored"] }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[[bin]]
name = "ferromic"
path = "src/main.rs"

[[bin]]
name = "vcf_merge"
path = "src/merge.rs"

[[bin]]
name = "run_vcf"
path = "src/run_vcf.rs"
